@@ -20,7 +20,6 @@ ZopeTestCase.installProduct('Archetypes')
 ZopeTestCase.installProduct('PortalTransforms', quiet=1)
 ZopeTestCase.installProduct('MimetypesRegistry', quiet=1)
 ZopeTestCase.installProduct('DataGridField', quiet=1)
-ZopeTestCase.installProduct('contentmigrations', quiet=1)
 
 ZopeTestCase.installProduct('Poi')
 
